feat: SHARP integration improvements
- Added Icosahedral projection mode (20 faces) for higher quality refinement
- Added unified projection.py interface
- Fixed SHARP input tensor shape logic (1536 resolution, scalar tensor)
- Fixed splat orientation (negated Y in PLY writer)
- Added 'Flip Y' toggle to splat viewer UI
- Expanded README with ML-SHARP installation instructions

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,22 @@ test_outputs/
 
 # Design Docs
 design_doc.md
+SHARP_INTEGRATION_DESIGN.md
+
+# Dependencies (Local)
+ml-sharp/
+
+# Debug & Scratch Scripts
+debug_*.py
+debug_*.txt
+test_debug.py
+test_exports.py
+test_output.zip
+
+# Generated Test Outputs
+TestImage/video_test_output/
+TestImage/frame_*.ply
+
+# Review Docs
+SHARP_IMPLEMENTATION_REVIEW.md
+SHARP_INTEGRATION_REVIEW.md
