docs: Add DA3 installation instructions and verification script
- Update INSTALL.md with pip install command for Depth Anything V3
- Add tests/test_da3_integration.py for end-to-end model and server verification
- Update .gitignore to exclude test logs and temp build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,12 @@ TestImage/frame_*.ply
 # Review Docs
 SHARP_IMPLEMENTATION_REVIEW.md
 SHARP_INTEGRATION_REVIEW.md
+
+# Cloned model repos (not submodules)
+spag4d/panda_arch/PanDA/
+
+# Test results
+test_results*.txt
+
+# Build outputs
+dist/
